# python-simpleconf

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .tagitrc  .travis.yml  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  simpleconf.py  tox.ini
.github/workflows/: build.yml
docs/: CHANGELOG.md
simpleconf/: __init__.py  caster.py  config.py  exceptions.py  loader.py  utils.py
simpleconf/loaders/: __init__.py  dict.py  env.py  ini.py  json.py  osenv.py  toml.py  yaml.py
tests/: fixt_simpleconf.py  test.py  test_caster.py  test_config.py  test_loaders.py  test_simpleconf.py  test_utils.py
