[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "python-simpleconf"
version = "0.6.0"
description = "Simple configuration management with python."
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/simpleconf"
repository = "https://github.com/pwwang/simpleconf"
packages = [
    {include = "simpleconf"}
]

[tool.poetry.dependencies]
python = "^3.7"
diot = "^0.2.1"
python-dotenv = { version="^0.21", optional = true}
pyyaml = { version="^6", optional = true}
# Use rtoml only when the wheel is available (linux)
rtoml = {version = "^0.8", optional = true, python = "<3.11", platform = "linux"}
tomli = {version = "^2.0", optional = true, python = "<3.11", markers = 'sys_platform != "linux"'}
iniconfig = {version = "^2.0", optional = true}

[tool.poetry.extras]
ini = [ "iniconfig" ]
env = [ "python-dotenv"]
yaml = [ "pyyaml"]
toml = [ "rtoml", "tomli"]
all = [ "iniconfig", "python-dotenv", "pyyaml", "rtoml", "tomli"]

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^4"

[tool.pytest.ini_options]
addopts = "-vv -p no:asyncio --cov=simpleconf --cov-report xml:cov.xml --cov-report term-missing"
filterwarnings = [
    "error"
]
console_output_style = "progress"
junit_family = "xunit1"

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
