[build-system]
requires = [ "poetry>=2",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "python-simpleconf"
version = "0.7.2"
description = "Simple configuration management with python."
authors = [ "pwwang <pwwang@pwwang.com>",]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pwwang/simpleconf"
repository = "https://github.com/pwwang/simpleconf"
packages = [
    {include = "simpleconf"}
]

[tool.poetry.dependencies]
python = "^3.9"
diot = "^0.3.2"
python-dotenv = { version="^1.1", optional = true}
pyyaml = { version="^6", optional = true}
panpath = "^0.4.8"
# Use rtoml only when the wheel is available (linux)
rtoml = {version = "^0.12", optional = true, platform = "linux"}
tomli = {version = "^2.0", optional = true, markers = 'sys_platform != "linux"'}
iniconfig = {version = "^2.0", optional = true}
aiofiles = {version = ">=23.0.0", optional = true}

[tool.poetry.extras]
ini = [ "iniconfig" ]
env = [ "python-dotenv"]
yaml = [ "pyyaml"]
toml = [ "rtoml", "tomli"]
async = [ "aiofiles"]
all = [ "iniconfig", "python-dotenv", "pyyaml", "rtoml", "tomli"]

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-cov = "^6"
pytest-asyncio = "^1"
backports-asyncio-runner = {version = "^1.1.0", python = "<3.11"}

[tool.pytest.ini_options]
addopts = "-vv --cov=simpleconf --cov-report xml:cov.xml --cov-report term-missing"
filterwarnings = [
    "error"
]
console_output_style = "progress"
junit_family = "xunit1"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
