[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-simpleconf"
version = "0.9.2"
description = "Simple configuration management with python."
authors = [{name = "pwwang", email = "pwwang@pwwang.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "diot>=0.3.3,<0.4",
    "panpath>=0.4.8,<0.5",
]

[project.urls]
Homepage = "https://github.com/pwwang/simpleconf"
Repository = "https://github.com/pwwang/simpleconf"

[project.optional-dependencies]
ini = ["iniconfig>=2.0,<3"]
env = ["python-dotenv>=1.1,<2"]
yaml = ["pyyaml>=6,<7"]
# Use rtoml only when the wheel is available (linux)
toml = [
    "rtoml>=0.12,<0.13; sys_platform == 'linux'",
    "tomli>=2.0,<3; sys_platform != 'linux'",
]
async = ["aiofiles>=23.0.0"]
jinja2 = ["jinja2>=3.0,<4"]
liquid = ["liquidpy>=0.8,<0.9"]
liquidpy = ["liquidpy>=0.8,<0.9"]
all = [
    "iniconfig>=2.0,<3",
    "python-dotenv>=1.1,<2",
    "pyyaml>=6,<7",
    "rtoml>=0.12,<0.13; sys_platform == 'linux'",
    "tomli>=2.0,<3; sys_platform != 'linux'",
]

[tool.hatch.build.targets.wheel]
packages = ["simpleconf"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-asyncio>=1",
    "backports-asyncio-runner>=1.1.0; python_version < '3.11'",
    "liquidpy>=0.8,<0.9",
    "panpath[all-async]>=0.4.10",
]

[tool.pytest.ini_options]
addopts = "-vv --cov=simpleconf --cov-report xml:cov.xml --cov-report term-missing"
filterwarnings = [
    "error"
]
console_output_style = "progress"
junit_family = "xunit1"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
